--- a/styles/mailerlite.css
+++ b/styles/mailerlite.css
@@ -820,46 +820,6 @@
   padding-top: 25px;
 }
 
-/*
-#mlb2-5200883.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-horizontalRow input {
-  background-color: #fff;
-  color: #333;
-  border-color: #a8a8ad;
-  border-radius: 0;
-  border-style: solid;
-  border-width: 1px;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding: 10px 10px;
-  width: 100%;
-  box-sizing: border-box;
-  overflow-y: initial;
-}
-#mlb2-5200883.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-horizontalRow button {
-  background-color: #c6302c !important;
-  border-color: #c6302c;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0;
-  box-shadow: none;
-  color: #fff !important;
-  cursor: pointer;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 14px !important;
-  font-weight: 700;
-  line-height: 20px;
-  margin: 0 !important;
-  padding: 10px !important;
-  width: 100%;
-  height: auto;
-}
-#mlb2-5200883.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-horizontalRow button:hover {
-  background-color: #9a1814 !important;
-  border-color: #9a1814 !important;
-} */
 #mlb2-5200883.ml-form-embedContainer
   .ml-form-embedWrapper
   .ml-form-embedBody
@@ -1017,22 +977,7 @@
 .ml-mobileButton-horizontal {
   display: none;
 }
-/* #mlb2-5200883 .ml-mobileButton-horizontal button {
-  background-color: #c6302c !important;
-  border-color: #c6302c !important;
-  border-style: solid !important;
-  border-width: 1px !important;
-  border-radius: 0 !important;
-  box-shadow: none !important;
-  color: #fff !important;
-  cursor: pointer;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif !important;
-  font-size: 14px !important;
-  font-weight: 700 !important;
-  line-height: 20px !important;
-  padding: 10px !important;
-  width: 100% !important;
-} */
+
 @media only screen and (max-width: 768px) {
   #mlb2-5200883.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-formContent.horozintalForm {
     padding: 0 0 10px 0 !important;
